add "Good" and "Equipment" entity
